@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyfilter/Attic/rubyfilter-0.12.ebuild,v 1.1 2005/08/10 22:24:48 citizen428 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyfilter/Attic/rubyfilter-0.12.ebuild,v 1.2 2005/08/11 10:28:34 dholm Exp $
 
 inherit ruby
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.lickey.com/rubyfilter/download/${P}.tar.gz"
 LICENSE="BSD"
 
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~ppc ~x86"
 USE_RUBY="ruby16 ruby18"
 
 IUSE=""
