@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/hugin
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.1 2005/08/10 22:56:50 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.2 2005/08/11 10:29:19 dholm Exp $
+
+  11 Aug 2005; David Holm <dholm@gentoo.org> hugin-0.5_rc1.ebuild:
+  Added to ~ppc.
 
 *hugin-0.5_rc1 (10 Aug 2005)
 
