@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rubyfilter
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyfilter/ChangeLog,v 1.1 2005/08/10 22:24:48 citizen428 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyfilter/ChangeLog,v 1.2 2005/08/11 10:28:34 dholm Exp $
+
+  11 Aug 2005; David Holm <dholm@gentoo.org> rubyfilter-0.12.ebuild:
+  Added to ~ppc.
 
 *rubyfilter-0.12 (10 Aug 2005)
 
